--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5986463555755786"
+  crossorigin="anonymous"></script>
   <title>Blockscout SDK Chain Compatibility Checker</title>
   <style>
     body {
